<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Asteroides</string>
    <string name="tituloAplicacion">Asteroides</string>
    <string name="Arrancar">Jugar</string>
    <string name="AcercaDe">Acerca de</string>
    <string name="Salir">Salir</string>
    <string name="Configurar">Configurar</string>
    <string name="tipoDeLetra_Bdebonita">fonts/B-de-bonita.ttf</string>

</resources>
