<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp" >

    <TextView
        style="@style/MiEstilo"
        android:id="@+id/textView1"
        android:text="@string/tituloAplicacion" />
    <Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Arrancar"
        android:textColor="@color/boton"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Configurar"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="lanzarAcercaDe"
        android:text="@string/AcercaDe"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="bSalir"
        android:text="@string/Salir"
        android:textSize="30sp" />

</LinearLayout>